<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizResultActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginVertical="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/userName_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Congratulations"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/your_score_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/your_score"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/userName_textView" />

        <TextView
            android:id="@+id/score_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="4/5"
            android:textSize="28sp"
            android:textStyle="bold"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/your_score_textview" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/new_quiz_cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="25dp"
            app:cardBackgroundColor="@color/color_light_gray_alpha"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp"
            app:layout_constraintTop_toBottomOf="@id/score_textview"
            app:strokeColor="@color/grey_dark"
            app:strokeWidth="2dp">

            <TextView
                android:id="@+id/option_textview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="10dp"
                android:gravity="center"
                android:text="@string/take_new_quiz"
                android:textSize="20sp"
                android:textStyle="bold" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/finish_cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="25dp"
            app:cardBackgroundColor="@color/color_light_gray_alpha"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp"
            app:layout_constraintTop_toBottomOf="@id/new_quiz_cardView"
            app:strokeColor="@color/grey_dark"
            app:strokeWidth="2dp">

            <TextView
                android:id="@+id/finish_textview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="10dp"
                android:gravity="center"
                android:text="@string/finish"
                android:textSize="20sp"
                android:textStyle="bold" />

        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>