<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizQuestionActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="25dp"
        android:layout_marginVertical="20dp">

        <TextView
            android:id="@+id/userName_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="welcome"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/progress_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/userName_textView">

            <TextView
                android:id="@+id/step_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1/5"
                android:textSize="20sp"
                android:textStyle="bold" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/option_main_cardView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardCornerRadius="20dp"
                app:cardElevation="0dp"
                app:strokeColor="@color/grey_dark"
                app:strokeWidth="1.5dp">

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="@style/CustomProgressBar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:max="100"
                    android:progress="50" />
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>

        <TextView
            android:id="@+id/question_title_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/android_questions_title"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/progress_layout" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/question_title_textview">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/question_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="Question details go here"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/options_recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintTop_toBottomOf="@id/question_textview" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/main_cardView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="25dp"
                    app:cardBackgroundColor="@color/color_light_gray_alpha"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="0dp"
                    app:layout_constraintTop_toBottomOf="@id/options_recyclerView"
                    app:strokeColor="@color/grey_dark"
                    app:strokeWidth="2dp">

                    <TextView
                        android:id="@+id/option_textview"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginVertical="10dp"
                        android:gravity="center"
                        android:text="@string/submit"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/next_cardView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="25dp"
                    app:cardBackgroundColor="@color/color_light_gray_alpha"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="0dp"
                    android:visibility="gone"
                    app:layout_constraintTop_toBottomOf="@id/options_recyclerView"
                    app:strokeColor="@color/grey_dark"
                    app:strokeWidth="2dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginVertical="10dp"
                        android:gravity="center"
                        android:text="@string/next"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </com.google.android.material.card.MaterialCardView>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>